# data-engineering-pipeline

./: .gitignore  README.md  pyproject.toml
data_pipeline/: discovery.ipynb  npi_extract.ipynb  state_city.yml
data_pipeline/1_silver/: nppes_parsed.sql
data_pipeline/2_gold/dimensions/: city_dimension.sql  state_dimension.sql  state_dimension_flattened.csv  taxonomy_code_dimension.sql
data_pipeline/2_gold/facts/: state_npi_facts.csv  state_npi_facts.sql
data_pipeline/2_gold/status/: insert_state_npi_daily_status.sql  state_npi_daily_status.csv
